<resources>
    <string name="app_name">Lunchbox</string>
    <string name="action_undo">Undo</string>
    <string name="box_section_title_freezer">In Freezer</string>
    <string name="box_section_title_else">Else</string>
    <string name="id_of_box">Name/ID of box</string>
    <string name="content_of_box">Content of box</string>
    <string name="add_box">Add Box</string>
    <string name="header_title_freezer">Freezer</string>
    <string name="header_title_unused">Unused</string>
    <string name="header_title_fridge">Fridge</string>
    <string name="update_button">Update</string>
    <plurals name="box_title_with_content_fridge_first">
        <item quantity="one">%s: With %s since %d day ago (and freezer %d)</item>
        <item quantity="other">%s: With %s since %d days ago (and freezer %d)</item>
    </plurals>
    <plurals name="box_title_with_content_freezer_first">
        <item quantity="one">%s: With %s since %d day ago (and fridge %d)</item>
        <item quantity="other">%s: With %s since %d days ago (and fridge %d)</item>
    </plurals>
    <plurals name="box_title_with_content_no_second">
        <item quantity="one">%s: With %s since %d day ago</item>
        <item quantity="other">%s: With %s since %d days ago</item>
    </plurals>
    <string name="box_title_without_content">%s: Empty</string>
    <string name="recent_content">Recent content</string>
    <string name="label_add_new">Add new Lunchbox</string>
    <string name="label_edit">Edit Lunchbox</string>
    <string name="action_delete">Delete</string>
    <string name="content_select">Select</string>
</resources>
