<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="14dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EditActivity">

    <TextView
        android:id="@+id/recent_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:text="@string/recent_content"
        android:textSize="14sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recent_content"
        android:layout_marginBottom="10dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/box_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/list"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/box_content_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/content_of_box"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/box_content"
        android:layout_marginBottom="10dp"
        android:text="@string/update_button" />

</RelativeLayout>