<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="14dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/box_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/box_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id_of_box"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/box_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/box_name"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/box_content_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/content_of_box"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/box_content"
        android:layout_marginBottom="10dp"
        android:text="@string/add_box" />

</RelativeLayout>